Wed Jun  1 01:15:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_encoding_set): should honor already set ecflags since it
	  might be set by mode option.  fixed #4804

Wed Jun  1 00:34:04 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): remove unused
	  variable.

Tue Jun  1 00:32:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): support instantiation from
	  a Float through Rational.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new): ditto.

	* test/bigdecimal/test_bigdecimal.rb (test_global_new_float): add a test for
	  the above changes.

	* test/bigdecimal/test_bigdecimal.rb (test_new_with_float): ditto.

Tue Jun  1 00:07:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_coerce): support coerce with a
	  Rational.  The precision used for instantiate a BigDecimal from the
	  given Rational is obtained from the receiver BigDecimal.

	* test/bigdecimal/test_bigdecimal.rb (test_coerce): add a test for the
	  above change.

Tue May 31 23:49:08 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (offset_to_sec): fixed invalid validation.

Tue May 31 23:43:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): replace the algorithm for
	  coercing from a Rational to stop requiring "bigecimal/util.rb".
	  [ruby-core:34318]

	* ext/bigdecimal/bigdecimal.c (GetVpValue): refactoring.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new): support instantiation from a
	  Rational.

	* test/bigdecimal/test_bigdecimal.rb (test_global_new_with_rational): add a
	  test for the above change.

	* test/bigdecimal/test_bigdecimal.rb (test_new_with_rational): ditto.

Tue May 31 22:44:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new): support instantiation a
	  BigDecimal object from an Integer.

	* test/bigdecimal/test_bigdecimal.rb (test_new_with_integer):