@@ -1,3 +1,7 @@
+Wed Jun  1 01:16:02 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* class.c (rb_mix_module): implement Module#mix.
+
 Wed Jun  1 01:15:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (io_encoding_set): should honor already set ecflags since it
